<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_tvshow_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:elevation="10dp"
            app:cardBackgroundColor="#fcfcfc"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">


                <TextView
                    android:id="@+id/tv_overview_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="12"
                    android:gravity="center"
                    android:text="@string/overview"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/detail_movie_title"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_value_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_overview_title"
                    android:layout_marginTop="@dimen/marginTitles"
                    android:ellipsize="end"
                    android:lineSpacingExtra="2dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/overview_text_size"
                    android:typeface="sans" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:elevation="10dp"
            app:cardBackgroundColor="#fcfcfc"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_schedule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/overview_text_size"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/tv_schedule_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:textSize="@dimen/value_text_size"
                        android:typeface="sans" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/marginTitles"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/runtime"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/overview_text_size"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/tv_runtime_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:textSize="@dimen/value_text_size"
                        android:typeface="sans" />

                </LinearLayout>
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="@dimen/marginTitles"
                   android:layout_height="wrap_content">
                   <TextView
                       android:id="@+id/tv_genre"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/genre"
                       android:textColor="@color/colorAccent"
                       android:textSize="@dimen/overview_text_size"
                       android:typeface="sans" />

                   <TextView
                       android:id="@+id/tv_genre_value"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:ellipsize="end"
                       android:textSize="@dimen/value_text_size"
                       android:typeface="sans" />

               </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>